# Hedge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ExampleGames/: README.md
ExampleGames/Pong/: CMakeLists.txt  GameConfig.yml  PackProject.bat  Project.yml  notes.txt
ExampleGames/Pong/assets/CM_Skybox/: CM_Skybox.yml
ExampleGames/Pong/assets/IBL_MainGameLighting/: IBL_MainGameLighting.yml  envBrdf.hdr
ExampleGames/Pong/assets/IBL_MainGameLighting/prefilterEnvMaps/: prefilterMip1.hdr  prefilterMip2.hdr  prefilterMip3.hdr  prefilterMip4.hdr  prefilterMip5.hdr  prefilterMip6.hdr  prefilterMip7.hdr
ExampleGames/Pong/assets/M_Ball/: M_Ball.yml
ExampleGames/Pong/assets/M_Basic_Wall/: M_Basic_Wall.yml
ExampleGames/Pong/assets/M_Opponent_Board/: M_Opponent_Board.yml
ExampleGames/Pong/assets/M_Player_Board/: M_Player_Board.yml
ExampleGames/Pong/assets/SM_Basic_Wall/: cube.gltf
ExampleGames/Pong/assets/SM_Cube/: SM_Cube.yml
ExampleGames/Pong/assets/SM_Opponent_Board/: SM_Opponent_Board.yml
ExampleGames/Pong/assets/SM_Player_Board/: SM_Player_Board.yml
ExampleGames/Pong/assets/SM_Sphere/: SM_Sphere.yml  uvSphere.gltf
ExampleGames/Pong/code/: CMakeLists.txt  MainGameEntity.cpp  MainGameEntity.h  MainGameHUDEntity.cpp  MainGameHUDEntity.h  PongGame.cpp  PongGame.h
ExampleGames/Pong/scene/: MainGameScene.yml
builtInModels/: g_builtInModels.h
doc/DDN/: 01 Code and Project Organization.md  02 Shaders and shaders header generation.md  03 Coordinate Space, Transformation and matrices in shader script.md  04 Event System.md  05 Camera Control Design.md  06 Physically Based Rendering and Materials.md  07 Asset System.md  08 Project Organization Refactorization.md  DDN.md  notes.txt
editor/: CMakeLists.txt  HedgeEditor.cpp  HedgeEditor.h  HedgeEditorGuiManager.cpp  HedgeEditorGuiManager.h  HedgeEditorRenderManager.cpp  HedgeEditorRenderManager.h
editor/DefaultProject/: DefaultProject.yml  GameConfig.yml
editor/DefaultProject/assets/M_Basic_Wall/: M_Basic_Wall.yml
editor/DefaultProject/assets/SM_Cube/: SM_Cube.yml
editor/DefaultProject/scene/: DefaultScene.yml
engine/: CMakeLists.txt  entry.cpp
engine/CMakeUtils/: CMakeUtil.cmake
engine/core/: CMakeLists.txt  HAssetRsrcManager.cpp  HAssetRsrcManager.h  HComponent.cpp  HComponent.h  HEntity.cpp  HEntity.h  HEvent.cpp  HEvent.h  HFrameListener.cpp  HFrameListener.h  HGpuRsrcManager.cpp  HGpuRsrcManager.h  HSerializer.cpp  HSerializer.h
engine/game/: CMakeLists.txt  gameTemplate.cpp  gameTemplate.h
engine/input/: CMakeLists.txt  InputHandler.cpp  InputHandler.h
engine/logging/: CMakeLists.txt  HLogger.cpp  HLogger.h
engine/render/: CMakeLists.txt  HBaseGuiManager.cpp  HBaseGuiManager.h  HBaseGuiRenderer.cpp  HBaseGuiRenderer.h  HCubemapRendererPipeline.cpp  HCubemapRendererPipeline.h  HPipeline.cpp  HPipeline.h  HRenderManager.cpp  HRenderManager.h  HRenderer.cpp  HRenderer.h
engine/scene/: CMakeLists.txt  HScene.cpp  HScene.h
engine/util/: CMakeLists.txt  HPipeline.h  UtilMath.cpp  UtilMath.h  Utils.cpp  Utils.h
shaders/: DumpQuad.frag.spv  DumpQuad.vert.spv  TODOS.txt  g_prebuiltShaders.h
shaders/BasicRenderer/: BasicRendererFrag.glsl  BasicRendererFrag.glsl.spv  BasicRendererFrag.hlsl.spv  BasicRendererVert.glsl  BasicRendererVert.glsl.spv  DumpQuadVert.hlsl
shaders/Diffuse/: DiffuseFrag.glsl  DiffuseVert.glsl  DiffuseVert.glsl.spv  DiffuseVert.hlsl.spv
shaders/PBR/: pbr_frag.hlsl  pbr_frag.hlsl.spv  pbr_vert.hlsl  pbr_vert.hlsl.spv
shaders/SkyboxCubemap/: skybox_frag.hlsl  skybox_frag.hlsl.spv  skybox_vert.hlsl  skybox_vert.hlsl.spv
shaders/shared/: GGXModel.hlsl  hammersley.hlsl
src/: HedgeEditor.cpp  HedgeEditor.h  main.cpp
src/util/: Utils.h
tools/: GatherHeaderFiles.py  GenerateGeoHeader.py  GenerateShaderHeader.py  ReleaseEngine.py
